Feb 13, 2001: Bill Adams <bill@evil.inetarena.com>
-Changed version to 0.9.6f, added announcement dir
 and announcement.

Feb 07, 2001: Bill Adams <bill@evil.inetarena.com>
-Fixed the core dumps (for the most part) for real.
 The only time I have seen a core dump at this point
 is when updating a master list where there are not
 any servers already in the list.  However, once
 you have a list of servers, you should be able to
 update/refresh at will without any problems.
-Lots of debugging code with the debug(...) call. If
 you want lots of output, use -d 3, to see the servers
 it is parsing use -d 4. For an insane amount of output
 use -d 7.  Debug levels greater than three will
 will have so much output that it will most likely 
 slow down the program.
-Added a fair number of comments to the code.

Jan 31, 2001: Bill Adams <bill@evil.inetarena.com>
-Made it so OSP game types show up correctly.

Jan 24, 2001: Bill Adams <bill@evil.inetarena.com>
-Fixed the game.c hack.  Bad bug.
	
Jan 23, 2001: Bill Adams <bill@evil.inetarena.com>
-Did BAD hack to game.c::q3_exec( ) so that when
 connecting to an arena (rocket arena 3) server,
 it will "+set sv_pure 0 +set vm_* 0" on the command
 line so arena will load properly.  As a side note,
 one should use vm_* all at zero unless you have a 
 really good reason to do otherwise.
	
Jan 21, 2001: Bill Adams <bill@evil.inetarena.com>
-Changed "Insert" behavior.  Now Insert brings up the add
 server dialog while SHIFT+Insert adds a server from the 
 server list to your favorites.  I am not sure about 
 this because one can also use CTRL+N to add another 
 server via a dialog. But I am told the Insert == Dialog
 is how GameSpy works so there it is.
-q3_exec now adds +set fs_game SSSS for either the
 fs_game or gamename.  This should improve connecting
 as it will load the mod when Q3A starts.
-Added a function in util.c to get the value for
 any server variable that shows up in the server info